; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/extr_streamwrite.c_test_odb_streamwrite__can_accept_chunks.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/extr_streamwrite.c_test_odb_streamwrite__can_accept_chunks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@stream = common dso_local global %struct.TYPE_4__* null, align 8
@.str = private unnamed_addr constant [9 x i8] c"deadbeef\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_odb_streamwrite__can_accept_chunks() #0 {
  %1 = alloca i32, align 4
  %2 = load %struct.TYPE_4__*, %struct.TYPE_4__** @stream, align 8
  %3 = call i32 @git_odb_stream_write(%struct.TYPE_4__* %2, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 8)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @stream, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @cl_assert_equal_sz(i32 8, i32 %7)
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @stream, align 8
  %10 = call i32 @git_odb_stream_write(%struct.TYPE_4__* %9, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 6)
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** @stream, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @cl_assert_equal_sz(i32 14, i32 %14)
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** @stream, align 8
  %17 = call i32 @git_odb_stream_finalize_write(i32* %1, %struct.TYPE_4__* %16)
  %18 = call i32 @cl_git_pass(i32 %17)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_odb_stream_write(%struct.TYPE_4__*, i8*, i32) #1

declare dso_local i32 @cl_assert_equal_sz(i32, i32) #1

declare dso_local i32 @git_odb_stream_finalize_write(i32*, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
